# sway-services

./: LICENSE  README.md  meson.build
config/: meson.build
config/sway/: 10-service.conf
examples/: idle.yaml
systemd/: kanshi.service  mako.service  meson.build  oguri.service  sway-session-pre.target  sway-session.target  sway.service  swayidle.service.in  wayland-session-pre.target  wayland-session.target
wayland-sessions/: meson.build  sway-session-unsupported-gpu.desktop  sway-session.desktop
